--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,24 +14,24 @@ services:
       - proxy
     restart: unless-stopped
 
-#  qbittorrent:
-#    image: lscr.io/linuxserver/qbittorrent:latest
-#    container_name: qbittorrent
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - TZ=Australia/Melbourne
-#      - WEBUI_PORT=8080
-#    volumes:
-#      - ./config/qbittorrent:/config
-#      - ./downloads:/downloads
-#    ports:
-#      - "8080:8080"   # LAN only
-#      - "6881:6881"
-#      - "6881:6881/udp"
-#    networks:
-#      - proxy
-#    restart: unless-stopped
+  qbittorrent:
+    image: lscr.io/linuxserver/qbittorrent:latest
+    container_name: qbittorrent
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Australia/Melbourne
+      - WEBUI_PORT=8080
+    volumes:
+      - ./config/qbittorrent:/config
+      - ./downloads:/downloads
+    ports:
+      - "8080:8080"   # LAN only
+      - "6881:6881"
+      - "6881:6881/udp"
+    networks:
+      - proxy
+    restart: unless-stopped
 #
 #  sonarr:
 #    image: lscr.io/linuxserver/sonarr:latest
