--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,23 +32,23 @@ services:
     networks:
       - proxy
     restart: unless-stopped
-#
-#  sonarr:
-#    image: lscr.io/linuxserver/sonarr:latest
-#    container_name: sonarr
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - TZ=Australia/Melbourne
-#    volumes:
-#      - ./config/sonarr:/config
-#      - ./downloads:/downloads
-#      - ./media/tv:/tv
-#    ports:
-#      - "8989:8989"   # LAN only
-#    networks:
-#      - proxy
-#    restart: unless-stopped
+
+  sonarr:
+    image: lscr.io/linuxserver/sonarr:latest
+    container_name: sonarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Australia/Melbourne
+    volumes:
+      - ./config/sonarr:/config
+      - ./downloads:/downloads
+      - ./media/tv:/tv
+    ports:
+      - "8989:8989"   # LAN only
+    networks:
+      - proxy
+    restart: unless-stopped
 #
 #  radarr:
 #    image: lscr.io/linuxserver/radarr:latest
