Add Radarr configuration and database files
- Created new database files for Radarr: radarr.db, radarr.db-shm, and radarr.db-wal.
- Added Radarr PID file to track the process ID.
- Updated docker-compose.yml to uncomment and configure the Radarr service with appropriate environment variables, volumes, and network settings.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,23 +49,23 @@ services:
     networks:
       - proxy
     restart: unless-stopped
-#
-#  radarr:
-#    image: lscr.io/linuxserver/radarr:latest
-#    container_name: radarr
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - TZ=Australia/Melbourne
-#    volumes:
-#      - ./config/radarr:/config
-#      - ./downloads:/downloads
-#      - ./media/movies:/movies
-#    ports:
-#      - "7878:7878"   # LAN only
-#    networks:
-#      - proxy
-#    restart: unless-stopped
+
+  radarr:
+    image: lscr.io/linuxserver/radarr:latest
+    container_name: radarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Australia/Melbourne
+    volumes:
+      - ./config/radarr:/config
+      - ./downloads:/downloads
+      - ./media/movies:/movies
+    ports:
+      - "7878:7878"   # LAN only
+    networks:
+      - proxy
+    restart: unless-stopped
 
 #  jellyfin:
 #    image: lscr.io/linuxserver/jellyfin:latest
