Add audit logs and configuration for Jellyseerr
- Created audit log files for tracking changes and events.
- Added detailed logging for the Jellyseerr application startup and operations.
- Introduced a comprehensive settings.json file with configuration options for various services including Plex, Jellyfin, Radarr, and Sonarr.
- Implemented notification agents configuration for email, Discord, Slack, Telegram, and more.
- Set up scheduled jobs for regular scans and updates for media libraries.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,18 +84,18 @@ services:
       - "8096:8096"   # LAN only
     restart: unless-stopped
 
-#  jellyseerr:
-#    image: fallenbagel/jellyseerr:latest
-#    container_name: jellyseerr
-#    environment:
-#      - TZ=Australia/Sydney
-#    volumes:
-#      - ./jellyseerr/config:/app/config
-#    networks:
-#      - proxy
-#    ports:
-#      - "5055:5055"   # LAN only
-#    restart: unless-stopped
+  jellyseerr:
+    image: fallenbagel/jellyseerr:latest
+    container_name: jellyseerr
+    environment:
+      - TZ=Australia/Sydney
+    volumes:
+      - ./jellyseerr/config:/app/config
+    networks:
+      - proxy
+    ports:
+      - "5055:5055"   # LAN only
+    restart: unless-stopped
 
 #  nginx-proxy:
 #    image: jc21/nginx-proxy-manager:latest
