Add logging database and qBittorrent configuration file
- Created a new SQLite WAL file for Prowlarr logs to track HTTP errors and update checks.
- Added a new configuration file for qBittorrent with initial stats settings.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,15 +113,15 @@ services:
       - ./nginx/data:/data
       - ./nginx/letsencrypt:/etc/letsencrypt
 
-#  cloudflared:
-#    image: cloudflare/cloudflared:latest
-#    container_name: cloudflared
-#    restart: unless-stopped
-#    networks:
-#      - proxy
-#    volumes:
-#      - ./cloudflared:/etc/cloudflared
-#    command: tunnel --no-autoupdate run 6f5e7bd8-0253-4776-bd39-6b7c4bd8cc76
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: cloudflared
+    restart: unless-stopped
+    networks:
+      - proxy
+    volumes:
+      - ./cloudflared:/etc/cloudflared
+    command: tunnel --no-autoupdate run 6f5e7bd8-0253-4776-bd39-6b7c4bd8cc76
 
 networks:
   proxy:
